# worldbuilderQT

./: .gitignore  FixCompile.md  README.md  ScriptEditor-QoL-Guide.md
Core/Libraries/Include/Lib/: BaseTypeCore.h
Core/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt  WBParallel.cpp  WBParallel.h
GeneralsMD/: ChangeLog - Adriane.txt
GeneralsMD/Code/GameEngine/Include/GameLogic/: GameLogic.h
GeneralsMD/Code/GameEngine/Source/Common/INI/: INI.cpp  INIWater.cpp
GeneralsMD/Code/GameEngineDevice/Include/W3DDevice/GameClient/: W3DWater.h  W3DWaterTracks.h
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/Shadow/: W3DVolumetricShadow.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/Water/: W3DWater.cpp  W3DWaterTracks.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: dx8wrapper.cpp  dx8wrapper.h
GeneralsMD/Code/Tools/WorldBuilder/: CMakeLists.txt
GeneralsMD/Code/Tools/WorldBuilder/include/: AutoEdgeOutTool.h  BlendMaterial.h  BrushTool.h  BuildList.h  CUndoable.h  CameraOptions.h  DialogFont.h  DrawObject.h  EditParameter.h  ExportScriptsOptions.h  FeatherOptions.h  FeatherTool.h  FenceOptions.h  FloodFillTool.h  GlobalLightOptions.h  GroveOptions.h  LayersList.h  MainFrm.h  MeshMoldOptions.h  MinimapDialog.h  MoundOptions.h  MoundTool.h  ObjectOptions.h  ObjectPreview.h  ObjectTool.h  OpenMap.h  PointerTool.h  RampOptions.h  RampTool.h  RoadOptions.h  ScriptActionsFalse.h  ScriptActionsTrue.h  ScriptConditions.h  ScriptDialog.h  SplashScreen.h  TerrainMaterial.h  TileTool.h  TracingOverlayOptions.h  WBFontAtlas.h  WBFrameWnd.h  (+13 more)
GeneralsMD/Code/Tools/WorldBuilder/qt/: UI_FILES.md  WBQtBridge.cpp  WBQtBridge.h  WBQtChrome.cpp  WBQtChrome.h  WBQtChromeBridge.h  WBQtComboStyle.cpp  WBQtComboStyle.h  WBQtMainWindow.cpp  WBQtMainWindow.h  WBQtMessageBox.cpp  WBQtMessageBox.h  WBQtNameMatch.h  WBQtOptionsPanels.cpp  WBQtPanelBridge.h  WBQtPreviewImage.h  WBQtScriptWindow.cpp  WBQtScriptWindow.h  WBQtScriptWindow.ui  WBQtShortcuts.cpp  WBQtShortcuts.h  WBQtTheme.cpp  WBQtTheme.h  WBQtToast.h  WBQtWindowPos.cpp  WBQtWindowPos.h
GeneralsMD/Code/Tools/WorldBuilder/qt/panels/: WBQtAddPlayerDialog.ui  WBQtBaseBuildPropsDialog.ui  WBQtBlendMaterialPanel.cpp  WBQtBlendMaterialPanel.h  WBQtBlendMaterialPanel.ui  WBQtBrushPanel.cpp  WBQtBrushPanel.h  WBQtBrushPanel.ui  WBQtBuildListPanel.cpp  WBQtBuildListPanel.h  WBQtBuildListPanel.ui  WBQtCameraBridge.h  WBQtCameraPanel.cpp  WBQtCameraPanel.h  WBQtCameraPanel.ui  WBQtCondActBridge.h  WBQtCondActDialog.cpp  WBQtCondActDialog.h  WBQtCondActDialog.ui  WBQtCoordDialog.ui  WBQtEntityFinderBridge.h  WBQtEntityFinderDialog.cpp  WBQtEntityFinderDialog.h  WBQtEntityFinderDialog.ui  WBQtExportScriptsDialog.ui  WBQtFeatherPanel.cpp  WBQtFeatherPanel.h  WBQtFeatherPanel.ui  WBQtFenceBridge.h  WBQtFencePanel.cpp  WBQtFencePanel.h  WBQtFencePanel.ui  WBQtFixTeamOwnerDialog.ui  WBQtGlobalLightBridge.h  WBQtGlobalLightPanel.cpp  WBQtGlobalLightPanel.h  WBQtGlobalLightPanel.ui  WBQtGroupDialog.ui  WBQtGroveBridge.h  WBQtGrovePanel.cpp  (+99 more)
GeneralsMD/Code/Tools/WorldBuilder/res/: WorldBuilder.rc  resource.h
GeneralsMD/Code/Tools/WorldBuilder/src/: AutoEdgeOutTool.cpp  BlendMaterial.cpp  BrushTool.cpp  BuildList.cpp  BuildListTool.cpp  CUndoable.cpp  CameraOptions.cpp  DialogFont.cpp  DrawObject.cpp  EditParameter.cpp  FeatherOptions.cpp  FeatherTool.cpp  FenceOptions.cpp  FloodFillTool.cpp  GlobalLightOptions.cpp  GroveOptions.cpp  GroveTool.cpp  LayersList.cpp  MainFrm.cpp  MinimapDialog.cpp  MoundOptions.cpp  MoundTool.cpp  ObjectOptions.cpp  ObjectPreview.cpp  ObjectTool.cpp  OpenMap.cpp  PointerTool.cpp  RampOptions.cpp  RampTool.cpp  RoadOptions.cpp  RoadTool.cpp  ScriptActionsFalse.cpp  ScriptActionsTrue.cpp  ScriptConditions.cpp  ScriptDialog.cpp  SplashScreen.cpp  StdAfx.cpp  TeamIdentity.cpp  TerrainMaterial.cpp  TileTool.cpp  (+46 more)
